--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,3 +24,4 @@ en:
     restart: "Retry processing this job"
   confirm:
     publish: "<b>Publishing this work to the repository will prevent any further changes from being made here.</b><br/><br/>All future updates to this work can be made from within the repository. Are you ready to publish?"
+    harvest: "Harvesting new records from Web Of Science will process as a background job.<br/><br/> Please be patient while publications are harvested. Refresh this page to see new publications being processed.<br/><br/><b>Are you ready to harvest?</b>"
