--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -27,6 +27,7 @@ en:
     harvest: "Harvesting new records from Web Of Science will process as a background job.<br/><br/> Please be patient while publications are harvested. Refresh this page to see new publications being processed.<br/><br/><b>Are you ready to harvest?</b>"
   publications:
     published_message: "This publication has already been published, it can only be modified in the repository."
+    publication_date_message: "Published to ScholarsArchive@OSU on %{pub_at}"
     not_authorized_message: "You are not authorized to access this page."
     claim_message: "You've claimed this publication, please update and publish it."
     restart_event_message: "Reprocessing event, please check back later for an update."
