--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,6 +30,5 @@ en:
     publication_date_message: "Published to ScholarsArchive@OSU on %{pub_at}"
     not_authorized_message: "You are not authorized to access this page."
     restart_event_message: "Reprocessing event, please check back later for an update."
-    update_message: "Publication was successfully updated."
+    update_message: "Publication was updated."
     delete_file_message: "%{filename} was deleted."
-    no_files_attached_message:  "This work cannot be published until the appropriate document(s) have been attached, click 'Upload' to find and attach the document(s)."
